--- a/.github/workflows/CI_CD_PIPELINE.yml
+++ b/.github/workflows/CI_CD_PIPELINE.yml
@@ -1,27 +1,18 @@
-# Very basic GitHub Action workflow, goes in ~/.github/workflows/deploy.yaml
+name: CI with Fallback to Previous Version
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on any branch or tag commit
   push:
     branches:
       - "*"
     tags:
       - "v*"
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
-  # This workflow contains a single job called "deploy"
   deploy:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
       - name: Install SnowSQL
@@ -33,8 +24,7 @@ jobs:
         run: |
           ~/bin/snowsql --version
 
-      # Run a SnowSQL Command using environment variables for Snowflake connection details
-      - name: Run SnowSQL Command
+      - name: Execute SQL with Try-Catch Logic
         env:
           SNOWSQL_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
           SNOWSQL_USER: ${{ secrets.SNOWFLAKE_USER }}
@@ -42,8 +32,39 @@ jobs:
           SNOWSQL_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
           SNOWSQL_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
         run: |
-          ~/bin/snowsql -q "SELECT CURRENT_VERSION();"
-          ~/bin/snowsql -q "ALTER GIT REPOSITORY CI_CD_DEMO.DEMO_SCHEMA.snowflake_extensions FETCH;"
-          ~/bin/snowsql -q "USE DATABASE CI_CD_DEMO;
-                            USE SCHEMA DEMO_SCHEMA;
-                            EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/SQL_SCRIPT.SQL;"
+          # Define function to simulate try-catch behavior
+          function try_catch() {
+            "$@"
+            status=$?
+            if [ $status -ne 0 ]; then
+              return $status
+            fi
+            return 0
+          }
+
+          # Try block: run the latest SQL script
+          echo "Trying to execute the latest SQL script..."
+          try_catch ~/bin/snowsql -q "USE DATABASE CI_CD_DEMO;
+                                      USE SCHEMA DEMO_SCHEMA;
+                                      EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/SQL_SCRIPT.SQL"
+
+          if [ $? -eq 0 ]; then
+            echo "Latest SQL script executed successfully."
+          else
+            echo "Failed to execute the latest SQL script. Moving to fallback (previous version)..."
+
+            # Catch block: run the previous version of the SQL script
+            previous_file="branches/main/$(git rev-parse HEAD~1):SQL_SCRIPT.SQL"
+            echo "Attempting to run previous version: $previous_file"
+
+            try_catch ~/bin/snowsql -q "USE DATABASE CI_CD_DEMO;
+                                        USE SCHEMA DEMO_SCHEMA;
+                                        EXECUTE IMMEDIATE FROM @snowflake_extensions/${previous_file};"
+
+            if [ $? -eq 0 ]; then
+              echo "Previous version of the SQL script executed successfully."
+            else
+              echo "Failed to execute both the latest and previous versions of the SQL script."
+              exit 1  # Exit with failure if both attempts fail
+            fi
+          fi
