--- a/.github/workflows/CI_CD_PIPELINE.yml
+++ b/.github/workflows/CI_CD_PIPELINE.yml
@@ -38,38 +38,37 @@ jobs:
           function try_catch() {
             "$@"
             status=$?
-            if [ $status -ne 0 ]; then
-              return $status
-            fi
-            return 0
+            return $status
           }
 
-          # Get the latest SQL script file name dynamically (assuming it's the only SQL file in the directory)
-          latest_file=$(git ls-tree -r HEAD --name-only | grep '\.SQL$' | head -n 1)
+          # Get the latest SQL script file names dynamically
+          sql_files=$(git ls-tree -r HEAD --name-only | grep '\.SQL$')
 
-          # Try block: run the latest SQL script
-          echo "Trying to execute the latest SQL script: $latest_file..."
-          try_catch ~/bin/snowsql -q "USE DATABASE CI_CD_DEMO;
-                                      USE SCHEMA DEMO_SCHEMA;
-                                      EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/$latest_file"
-
-          if [ $? -eq 0 ]; then
-            echo "Latest SQL script executed successfully."
-          else
-            echo "Failed to execute the latest SQL script. Moving to fallback (previous version)..."
-
-            # Catch block: run the previous version of the SQL script
-            previous_file="branches/main/$(git rev-parse HEAD~1):$latest_file"
-            echo "Attempting to run previous version: $previous_file"
-
+          # Loop through each SQL file and execute
+          for latest_file in $sql_files; do
+            echo "Trying to execute SQL script: $latest_file..."
             try_catch ~/bin/snowsql -q "USE DATABASE CI_CD_DEMO;
                                         USE SCHEMA DEMO_SCHEMA;
-                                        EXECUTE IMMEDIATE FROM @snowflake_extensions/${previous_file};"
+                                        EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/$latest_file"
 
             if [ $? -eq 0 ]; then
-              echo "Previous version of the SQL script executed successfully."
+              echo "$latest_file executed successfully."
             else
-              echo "Failed to execute both the latest and previous versions of the SQL script."
-              exit 1  # Exit with failure if both attempts fail
+              echo "Failed to execute $latest_file. Moving to fallback (previous version)..."
+
+              # Catch block: run the previous version of the SQL script
+              previous_file="branches/main/$(git rev-parse HEAD~1):$latest_file"
+              echo "Attempting to run previous version: $previous_file"
+
+              try_catch ~/bin/snowsql -q "USE DATABASE CI_CD_DEMO;
+                                          USE SCHEMA DEMO_SCHEMA;
+                                          EXECUTE IMMEDIATE FROM @snowflake_extensions/${previous_file};"
+
+              if [ $? -eq 0 ]; then
+                echo "Previous version of $latest_file executed successfully."
+              else
+                echo "Failed to execute both the latest and previous versions of $latest_file."
+                exit 1  # Exit with failure if both attempts fail
+              fi
             fi
-          fi
+          done
