--- a/.github/workflows/CI_CD_PIPELINE.yml
+++ b/.github/workflows/CI_CD_PIPELINE.yml
@@ -47,19 +47,28 @@ jobs:
           # Loop through each SQL file and execute
           for latest_file in $sql_files; do
             echo "Trying to execute SQL script: $latest_file..."
-            if try_catch ~/bin/snowsql -q "USE DATABASE CI_CD_DEMO; USE SCHEMA DEMO_SCHEMA; EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/$latest_file"; then
+            # Capture the error output in a variable
+            error_output=$(~/bin/snowsql -q "USE DATABASE CI_CD_DEMO; USE SCHEMA DEMO_SCHEMA; EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/$latest_file" 2>&1)
+            status=$?
+
+            if [ $status -eq 0 ]; then
               echo "$latest_file executed successfully."
             else
-              echo "Failed to execute $latest_file. Moving to fallback (previous version)..."
+              echo "Failed to execute $latest_file. Error: $error_output"
+              echo "Moving to fallback (previous version)..."
 
               # Catch block: run the previous version of the SQL script
               previous_file="branches/main/$(git rev-parse HEAD~1):$latest_file"
               echo "Attempting to run previous version: $previous_file"
 
-              if try_catch ~/bin/snowsql -q "USE DATABASE CI_CD_DEMO; USE SCHEMA DEMO_SCHEMA; EXECUTE IMMEDIATE FROM @snowflake_extensions/${previous_file};"; then
+              # Capture the error output for the previous version
+              error_output_fallback=$(~/bin/snowsql -q "USE DATABASE CI_CD_DEMO; USE SCHEMA DEMO_SCHEMA; EXECUTE IMMEDIATE FROM @snowflake_extensions/${previous_file};" 2>&1)
+              status_fallback=$?
+
+              if [ $status_fallback -eq 0 ]; then
                 echo "Previous version of $latest_file executed successfully."
               else
-                echo "Failed to execute both the latest and previous versions of $latest_file."
+                echo "Failed to execute both the latest and previous versions of $latest_file. Error: $error_output_fallback"
                 exit 1  # Exit with failure if both attempts fail
               fi
             fi
