--- a/.github/workflows/CI_CD_PIPELINE.yml
+++ b/.github/workflows/CI_CD_PIPELINE.yml
@@ -41,39 +41,39 @@ jobs:
           for latest_file in $sql_files; do
             echo "Trying to execute SQL script: $latest_file..."
 
-            # Execute the SQL script and capture the error output
-            error_output=$(~/bin/snowsql -q "USE DATABASE CI_CD_DEMO; USE SCHEMA DEMO_SCHEMA; EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/$latest_file" 2>&1)
+            # Execute the SQL script and capture the output
+            output=$(~/bin/snowsql -q "USE DATABASE CI_CD_DEMO; USE SCHEMA DEMO_SCHEMA; EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/$latest_file" 2>&1)
             status=$?
 
             # Output the status of the command
             echo "Execution status for $latest_file: $status"
-            echo "Error Output: $error_output"
+            echo "Output: $output"
 
-            # Check the exit status of the command
-            if [ $status -eq 0 ]; then
-              echo "$latest_file executed successfully."
-            else
-              echo "Failed to execute $latest_file. Error: $error_output"
+            # Check if the execution was successful
+            if [ $status -ne 0 ]; then
+              echo "Failed to execute $latest_file. Error: $output"
               echo "Moving to fallback (previous version)..."
 
               # Construct the path for the previous version
               previous_file="branches/main/$(git rev-parse HEAD~1):$latest_file"
               echo "Attempting to run previous version: $previous_file"
 
-              # Execute the previous version and capture the error output
-              error_output_fallback=$(~/bin/snowsql -q "USE DATABASE CI_CD_DEMO; USE SCHEMA DEMO_SCHEMA; EXECUTE IMMEDIATE FROM @snowflake_extensions/${previous_file};" 2>&1)
+              # Execute the previous version and capture the output
+              output_fallback=$(~/bin/snowsql -q "USE DATABASE CI_CD_DEMO; USE SCHEMA DEMO_SCHEMA; EXECUTE IMMEDIATE FROM @snowflake_extensions/${previous_file};" 2>&1)
               status_fallback=$?
 
               # Output the status of the fallback command
               echo "Execution status for previous version of $latest_file: $status_fallback"
-              echo "Fallback Error Output: $error_output_fallback"
+              echo "Fallback Output: $output_fallback"
 
-              # Check the exit status for the previous version
-              if [ $status_fallback -eq 0 ]; then
-                echo "Previous version of $latest_file executed successfully."
-              else
-                echo "Failed to execute both the latest and previous versions of $latest_file. Error: $error_output_fallback"
+              # Check if the fallback execution was successful
+              if [ $status_fallback -ne 0 ]; then
+                echo "Failed to execute both the latest and previous versions of $latest_file. Error: $output_fallback"
                 exit 1  # Exit with failure if both attempts fail
+              else
+                echo "Previous version of $latest_file executed successfully."
               fi
+            else
+              echo "$latest_file executed successfully."
             fi
           done
