--- a/.github/workflows/CI_CD_PIPELINE.yml
+++ b/.github/workflows/CI_CD_PIPELINE.yml
@@ -1,18 +1,27 @@
-name: CI with Fallback to Previous Version
+# Very basic GitHub Action workflow, goes in ~/.github/workflows/deploy.yaml
 
+name: CI
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on any branch or tag commit
   push:
     branches:
       - "*"
     tags:
       - "v*"
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
+  # This workflow contains a single job called "deploy"
   deploy:
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
       - name: Install SnowSQL
@@ -24,7 +33,8 @@ jobs:
         run: |
           ~/bin/snowsql --version
 
-      - name: Execute SQL with Try-Catch Logic
+      # Run a SnowSQL Command using environment variables for Snowflake connection details
+      - name: Run SnowSQL Command
         env:
           SNOWSQL_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
           SNOWSQL_USER: ${{ secrets.SNOWFLAKE_USER }}
@@ -32,48 +42,8 @@ jobs:
           SNOWSQL_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
           SNOWSQL_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
         run: |
+          ~/bin/snowsql -q "SELECT CURRENT_VERSION();"
           ~/bin/snowsql -q "ALTER GIT REPOSITORY CI_CD_DEMO.DEMO_SCHEMA.snowflake_extensions FETCH;"
-
-          # Get the latest SQL script file names dynamically
-          sql_files=$(git ls-tree -r HEAD --name-only | grep '\.SQL$')
-
-          # Loop through each SQL file and execute
-          for latest_file in $sql_files; do
-            echo "Trying to execute SQL script: $latest_file..."
-
-            # Execute the SQL script and capture the output
-            output=$(~/bin/snowsql -q "USE DATABASE CI_CD_DEMO; USE SCHEMA DEMO_SCHEMA; EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/$latest_file" 2>&1)
-            status=$?
-
-            # Output the status of the command
-            echo "Execution status for $latest_file: $status"
-            echo "Output: $output"
-
-            # Check if the execution was successful
-            if [ $status -ne 0 ]; then
-              echo "Failed to execute $latest_file. Error: $output"
-              echo "Moving to fallback (previous version)..."
-
-              # Construct the path for the previous version
-              previous_file="branches/main/$(git rev-parse HEAD~1):$latest_file"
-              echo "Attempting to run previous version: $previous_file"
-
-              # Execute the previous version and capture the output
-              output_fallback=$(~/bin/snowsql -q "USE DATABASE CI_CD_DEMO; USE SCHEMA DEMO_SCHEMA; EXECUTE IMMEDIATE FROM @snowflake_extensions/${previous_file};" 2>&1)
-              status_fallback=$?
-
-              # Output the status of the fallback command
-              echo "Execution status for previous version of $latest_file: $status_fallback"
-              echo "Fallback Output: $output_fallback"
-
-              # Check if the fallback execution was successful
-              if [ $status_fallback -ne 0 ]; then
-                echo "Failed to execute both the latest and previous versions of $latest_file. Error: $output_fallback"
-                exit 1  # Exit with failure if both attempts fail
-              else
-                echo "Previous version of $latest_file executed successfully."
-              fi
-            else
-              echo "$latest_file executed successfully."
-            fi
-          done
+          ~/bin/snowsql -q "USE DATABASE CI_CD_DEMO;
+                            USE SCHEMA DEMO_SCHEMA;
+                            EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/SQL_SCRIPT.SQL;"
